--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-canvas {
+/* canvas {
     border: 5px solid black;
+  } */
+
+  body {
+    font-family: "Press Start 2P";
+    text-align: center;
+    padding: 30px;
+    background-image: url(/Sprites/FondoWeb.jpg);
   }
