--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@
     font-family: "Press Start 2P";
     text-align: center;
     padding: 30px;
-    background-image: url(/Sprites/FondoWeb.jpg);
+    background-image: url(./Sprites/FondoWeb.jpg);
   }
