--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
-   body {
+/* canvas {
+    border: 5px solid black;
+  } */
+
+  body {
     font-family: "Press Start 2P";
     text-align: center;
     padding: 30px;
-    background-image: url(./Sprites/FondoWeb.jpg);
+    background-image: url(/Sprites/FondoWeb.jpg);
+  }
+
+  img {
+    width: 700px;
+    height: 500px;
   }
