--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
-/* canvas {
-    border: 5px solid black;
-  } */
 
   body {
     font-family: "Press Start 2P";
     text-align: center;
     padding: 30px;
-    background-image: url(/Sprites/FondoWeb.jpg);
+    background-image: url(./Sprites/FondoWeb.jpg);
   }
 
   img {
